--- a/frontend/app/app.css
+++ b/frontend/app/app.css
@@ -1,1 +1,10 @@
 @import "tailwindcss";
+
+@utility container {
+  margin-inline: auto;
+  padding-inline: 2rem;
+
+  @variant lg {
+    padding-inline: 10rem;
+  }
+}
